prevent horizontal scrolling on ios

--- a/css/projects.css
+++ b/css/projects.css
@@ -149,6 +149,7 @@ main .project-detail {
 	border-radius: 4px;
 	transition: opacity 0.3s ease;
 	opacity: 1;
+	overflow-x: hidden;
 }
 
 /* Back Button */
